--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/css/dark.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <script src="https://kit.fontawesome.com/7c3aef27c1.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,10 +24,11 @@
             <h1>Minhas Tarefas</h1>
         </div>
         <div class="config">
-            <i class="fa-solid fa-pencil"></i>
+            <i class="fa-solid fa-pencil" onclick="openColors()"></i>
             <i class="fa-solid fa-sun" onclick="darkMode()"></i>
             <i class="fa-solid fa-moon" onclick="darkMode()"></i>
         </div>
+
 
         <div class="menu-mobile">
             <a href=""><i class="fa-solid fa-bars"></i></a>
@@ -33,26 +36,54 @@
     </header>
 
     <main>
+        <section class="mudarCor">
+            <div class="botao_cor" title="Mudar cor">
+                <h1>Mudar Cor</h1>
+                <div class="cores">
+                    <div class="cor black" title="Black" style="background-color: black;"></div>
+                    <div class="cor white" title="White" style="background-color: white;"></div>
+                    <div class="cor green" title="Green" style="background-color: green;"></div>
+                    <div class="cor yellow" title="Yellow" style="background-color: yellow;"></div>
+                    <div class="cor blue" title="Blue" style="background-color: blue;"></div>
+                    <div class="cor grey" title="Grey" style="background-color: grey;"></div>
+                    <div class="cor Brown" title="Brown" style="background-color: Brown;"></div>
+                    <div class="cor aqua" title="aqua" style="background-color: aqua;"></div>
+                    <div class="cor blueviolet" title="blueviolet" style="background-color: blueviolet"></div>
+                    <div class="cor cadetblue" title="cadetblue" style="background-color: cadetblue"></div>
+                    <div class="cor chartreuse" title="chartreuse" style="background-color: chartreuse"></div>
+                    <div class="cor chocolate" title="chocolate" style="background-color: chocolate"></div>
+                    <div class="cor coral" title="coral" style="background-color: coral"></div>
+                    <div class="cor cornflowerblue" title="cornflowerblue" style="background-color: cornflowerblue"></div>
+                    <div class="cor crimson" title="crimson" style="background-color: crimson"></div>
+                    <div class="cor darkcyan" title="darkcyan" style="background-color: darkcyan;"></div>
+                    <div class="cor darkolivegreen" title="darkolivegreen" style="background-color: darkolivegreen"></div>
+                    <div class="cor dodgerblue" title="dodgerblue" style="background-color: dodgerblue"></div>
+                    <div class="cor goldenrod" title="goldenrod" style="background-color: goldenrod"></div>
+                    <div class="cor mediumorchid" title="mediumorchid" style="background-color: mediumorchid"></div>
+                </div>
+                <div class="corPersonalizada">
+                    <input type="color" name="style1" id="style1" value="#FFFFFF">
+                    <label for="style1">Cor personalizada</label>
+                </div>
+            </div>
+        </section>
         <section class="newList">
             <div class="newItem">
-                <input type="text" name="tarefa" id="tarefa" placeholder="Criar uma tarefa">
+                <input type="text" name="tarefa" id="tarefa" placeholder="Criar uma tarefa" maxlength="50">
                 <button id="enviar">Criar</button>
             </div>
         </section>
 
         <section class="itens">
             <ul class="list-tarefas">
-                
+
             </ul>
         </section>
 
-
-        <main>
-            
-        </main>
     </main>
 
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/colors.js"></script>
 </body>
 
 </html>
