--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <div class="cor blue" title="Blue" style="background-color: blue;"></div>
                     <div class="cor grey" title="Grey" style="background-color: grey;"></div>
                     <div class="cor Brown" title="Brown" style="background-color: Brown;"></div>
-                    <div class="cor aqua" title="aqua" style="background-color: aqua;"></div>
+                    <div class="cor aqua" title="aqua" style="background-color: rgb(3, 197, 197);"></div>
                     <div class="cor blueviolet" title="blueviolet" style="background-color: blueviolet"></div>
                     <div class="cor cadetblue" title="cadetblue" style="background-color: cadetblue"></div>
-                    <div class="cor chartreuse" title="chartreuse" style="background-color: chartreuse"></div>
+                    <div class="cor chartreuse" title="chartreuse" style="background-color: rgb(51, 95, 7)"></div>
                     <div class="cor chocolate" title="chocolate" style="background-color: chocolate"></div>
                     <div class="cor coral" title="coral" style="background-color: coral"></div>
                     <div class="cor cornflowerblue" title="cornflowerblue" style="background-color: cornflowerblue"></div>
