--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 
 <head>
+    <meta name="google-site-verification" content="oz8gKo3GG8dlbIqTm7axYfe5RdsE8z8B8P6Kr5RG-jU" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tarefas</title>
